--- a/style.css
+++ b/style.css
@@ -9,13 +9,14 @@ body {
   margin: 0 auto;
   display: block;
   text-align: right;
-}
-.aaa img {
-  width: 100%;
-}
-.aaa .more_inf {
   font-family: fantasy, cursive;
 }
+img {
+  width: 100%;
+}
+/* .aaa .more_inf {
+  font-family: fantasy, cursive;
+} */
 
 @media (max-width: 768px) {
   .aaa {
@@ -60,8 +61,7 @@ button:hover {
   color: #3a3a3a;
 }
 /* Heading */
-h3,
-label[for="new-task"] {
+h3 {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -87,7 +87,7 @@ input[type="text"]:focus {
 }
 
 /* New Task */
-label[for="new-task"] {
+h3[for="new-task"] {
   display: block;
   margin: 0 0 20px;
 }
