--- a/style.css
+++ b/style.css
@@ -1,52 +1,63 @@
-/* Basic Style */
-body {
+.body {
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
 }
-.aaa {
+
+.header {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
-  font-family: fantasy, cursive;
 }
-img {
+
+.header__img {
   width: 100%;
 }
 
+.header__link {
+  font-family: Fantasy, cursive;
+}
+
 @media (max-width: 768px) {
-  .aaa {
+  .header {
     text-align: center;
   }
 }
-.centered-main-page-element {
+
+.main {
   display: block;
   width: 500px;
   margin: 0 auto 0;
 }
-.task {
+
+.task-item__text,
+.task-item__label {
   width: 56%;
   display: inline-block;
   flex-grow: 1;
 }
-.task-row-wrapper {
+
+.task-container {
   display: flex;
 }
-ul {
+
+.task-list {
   margin: 0;
   padding: 0px;
 }
 
-li,
-h3 {
+.task-item,
+.main-section__title {
   list-style: none;
 }
-input,
-button {
+
+.task-item__text,
+.btn {
   outline: none;
 }
-button {
+
+.btn {
   background: none;
   border: 0px;
   color: #888;
@@ -55,11 +66,13 @@ button {
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
-button:hover {
+
+.btn:hover {
   color: #3a3a3a;
 }
+
 /* Heading */
-h3 {
+.main-section__title {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -68,7 +81,8 @@ h3 {
   margin: 0;
   text-transform: uppercase;
 }
-input[type="text"] {
+
+.task-item__text {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -80,70 +94,72 @@ input[type="text"] {
   font-family: Lato, sans-serif;
   color: #888;
 }
-input[type="text"]:focus {
+
+.task-item__text:focus {
   color: #333;
 }
 
 /* New Task */
-h3[for="new-task"] {
+.main-section__title_add {
   display: block;
   margin: 0 0 20px;
 }
-input#new-task {
-  width: 318px;
-}
 
 /* Task list */
-li {
+.task-item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
-
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-li > * {
+
+.task-item > * {
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.task-item__checkbox {
   margin: 0 10px;
 }
-li > label {
+
+.task-item__label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-li > input[type="text"] {
+
+.task-item__text {
   width: 226px;
 }
-button.delete img {
+
+.btn__delete-icon {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+
+.btn__delete-icon:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+.task-list_completed .task-item__label {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type="text"] {
+.task-item .task-item__text {
   display: none;
 }
 
-ul li.editMode input[type="text"] {
+.task-item_edit .task-item__text {
   display: inline-block;
   width: 224px;
 }
 
-ul li.editMode label {
+.task-item_edit .task-item__label {
   display: none;
 }
